--- a/readme.org
+++ b/readme.org
@@ -38,15 +38,25 @@
   - 现有的游戏规则：再找了理解一下：现找到原项目中提到这些。但作为程序员，不把它所有相关逻辑读懂，都感觉不明白它说的狠多是什么意思
     
 [[./pic/readme_20230510_160604.png]]
-
-| *2 为常主*  | 是常主，就常主会比较多，否则常主少，尤其打王的时候|
-| *5 10 K 必打*  | 因为比较难打|
+|----------------------------+-------------------------------------------------------------------------------|
+| 配置用户选项               | 选项的功能说明                                                                |
+|----------------------------+-------------------------------------------------------------------------------|
+| *2 为常主*                 | 是常主，就常主会比较多，尤其打王的时候；否则常主少，尤其打王的时候            |
+|----------------------------+-------------------------------------------------------------------------------|
 | *单 J 勾到6, 双 JJ 勾到 2* | 开历史倒车，增加游戏的无穷乐趣：惊险刺激：逢对家对J, 谁不想把对方废到6 或是2? |
-|                        |逢自家打到J, 会想要被对方废到6 或是2? |
-| *逢 J 必打* | 因为上面不能言说的【惊险刺激】，不给任何双方逃跑的好玩机会 |
-| *小光升1 级，大光连升3 级* | 不满 40 算小光，0 分为大光头。。。连升三级|
-| *捡分方扣底，底分翻倍* | 单扣乘2, 又扣乘 4, 拖拉机扣牌数乘 2. |
-|                   |如此，才能让捡分方快速超越，以风马牛不能及之势火箭升级。。。|
+|                            | 逢自家打到J, 会想要被对方废到6 或是2?                                         |
+|----------------------------+-------------------------------------------------------------------------------|
+| *5 10 K 必打*              | 因为比较难打                                                                  |
+| *逢 J 必打*                | 因为上面不能言说的【惊险刺激】，不给任何双方逃跑的好玩机会                    |
+| *J Q A必打*               | 因为他们所添加的各种乐趣。若是J 与Q 合并为JJ, 则Q 可以跳过                    |
+|----------------------------+-------------------------------------------------------------------------------|
+| *小光升1 级，大光连升3 级* | 不满 40 算小光，0 分为大光头。。。连升三级                                    |
+|----------------------------+-------------------------------------------------------------------------------|
+| 游戏亮牌与反牌逻辑完善     | 添加闲家反牌时急速填扩张抠牌底分的机会                                        |
+|----------------------------+-------------------------------------------------------------------------------|
+| *捡分方扣底，底分翻倍*     | 单扣乘2, 双扣乘 4, 甩牌或是拖拉机扣，则牌的张数，乘以 2.                      |
+|                            | 如此，才能让捡分方快速超越，以风马牛不能及之势火箭升级。。。                  |
+|----------------------------+-------------------------------------------------------------------------------|
 - *【关于J Q】*, 游戏设置： 
   - 增强的规则：在一些地方流行一J到底、Q到半的玩法。
   - 庄家在打J时，如果下台，并且最后一把被J抠底，那么此庄家再上台时将从2开始打。
@@ -80,5 +90,9 @@
 [[./pic/readme_20230511_163501.png]]
 * 项目主要进展
 - 因为两个参考项目的版本都狠古旧，现用最新版本的ET 【我觉得这里，最好我还是先去试ET7.2 官方版本可能更好】就以自己能有的相对快速，按照现有的理解，把能重组的重组出来。不理解的，再去看下两个项目分别的实现逻辑。
+- UILobby 的三个命令按钮狠好创建，但因为接下来的逻辑没能创建连通，程序仍然是运行不通，出报错。接下来应该是一段时间程序都极可能报错。但会试着修改每个界面上的错，把这个游戏的重构任务完成。
+- 现在的游戏主要是参考斗地主游戏，并根据最新ET7 框架的重构来，来重构自己的游戏，会在现各种文件报错的基础上一一修改掉所有的错，直到自己的游戏重构结束。因为对自己有绝对的自信，相信自己，就不怕它会出现的各种报错。真正改起来，也是 a-piece-of-cake 一口咬下。。。拿下。。。【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】
+- 程序本身感觉不到困难，会试着解决过程中遇到的所有问题。只是今天状态不够，晚上会给妈打电话，会试着建几个 Unity 上会要用到的预设，再不行，今天晚上就早点儿休息。【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
+- 感觉程序的逻辑现在已经比较简单了：但是仍然需要花点儿时间，来熟悉这个重构过的ET 7 框架。今天下午会熟悉一部分，剩余未完成的明天上午来完成。今天熟悉划重点，与自己游戏的重构相关的重点。比如 *先前的多服务器系统变成为现在的服务器的路由系统，*, 不同层级的路由？网络调用下的各种Helper 类，比如 LoginHelper, 其它 Helper 等
 * 残余的几个小 bug
 - 当进入UILobby 的时候，要把前面的 UILogin 删除。应该是有逻辑，只是因为我现在的【BUG：】，后面就座地执行的逻辑中断了
