--- a/ET.org
+++ b/ET.org
@@ -1158,12 +1158,78 @@ public class SessionPlayerComponent : Entity, IAwake, IDestroy {
     public long PlayerId { get; set; }
 }
    #+END_SRC
-* 
-** 
+* ResourcesComponent 资源包管理器相关：有时候，拖拉机游戏里会需要拿它来加载图片
+** ResourcesComponent: 同文件有其生成系
    #+BEGIN_SRC csharp
+[ComponentOf]
+public class ResourcesComponent: Entity, IAwake, IDestroy {
+    public static ResourcesComponent Instance { get; set; }
+    public AssetBundleManifest AssetBundleManifestObject { get; set; }
+    public Dictionary<int, string> IntToStringDict = new Dictionary<int, string>();
+    public Dictionary<string, string> StringToABDict = new Dictionary<string, string>();
+    public Dictionary<string, string> BundleNameToLowerDict = new Dictionary<string, string>() { { "StreamingAssets", "StreamingAssets" } };
+    public readonly Dictionary<string, Dictionary<string, UnityEngine.Object>> resourceCache =
+        new Dictionary<string, Dictionary<string, UnityEngine.Object>>();
+    public readonly Dictionary<string, ABInfo> bundles = new Dictionary<string, ABInfo>();
+    // 缓存包依赖，不用每次计算
+    public readonly Dictionary<string, string[]> DependenciesCache = new Dictionary<string, string[]>();
+}
    #+END_SRC
-** 
+** 客户端 ConfigLoader 的Invoke 标签下：在根控件 Root 下添加资源管理器组件
    #+BEGIN_SRC csharp
+[Invoke]
+public class GetAllConfigBytes: AInvokeHandler<ConfigComponent.GetAllConfigBytes, Dictionary<Type, byte[]>> {
+    public override Dictionary<Type, byte[]> Handle(ConfigComponent.GetAllConfigBytes args) {
+        Dictionary<Type, byte[]> output = new Dictionary<Type, byte[]>();
+        HashSet<Type> configTypes = EventSystem.Instance.GetTypes(typeof (ConfigAttribute));
+
+        if (Define.IsEditor) {
+            string ct = "cs";
+            GlobalConfig globalConfig = Resources.Load<GlobalConfig>("GlobalConfig");
+            CodeMode codeMode = globalConfig.CodeMode;
+            switch (codeMode) {
+            case CodeMode.Client:
+                ct = "c";
+                break;
+            case CodeMode.Server:
+                ct = "s";
+                break;
+            case CodeMode.ClientServer:
+                ct = "cs";
+                break;
+            default:
+                throw new ArgumentOutOfRangeException();
+            }
+            List<string> startConfigs = new List<string>() {
+                "StartMachineConfigCategory", 
+                "StartProcessConfigCategory", 
+                "StartSceneConfigCategory", 
+                "StartZoneConfigCategory",
+            };
+            foreach (Type configType in configTypes) {
+                string configFilePath;
+                if (startConfigs.Contains(configType.Name)) {
+                    configFilePath = $"../Config/Excel/{ct}/{Options.Instance.StartConfig}/{configType.Name}.bytes";    
+                }
+                else {
+                    configFilePath = $"../Config/Excel/{ct}/{configType.Name}.bytes";
+                }
+                output[configType] = File.ReadAllBytes(configFilePath);
+            }
+        } else {
+            using (Root.Instance.Scene.AddComponent<ResourcesComponent>()) { // <<<<<<<<<<<<<<<<<<<< 
+                const string configBundleName = "config.unity3d";
+                ResourcesComponent.Instance.LoadBundle(configBundleName);
+
+                foreach (Type configType in configTypes) {
+                    TextAsset v = ResourcesComponent.Instance.GetAsset(configBundleName, configType.Name) as TextAsset;
+                    output[configType] = v.bytes;
+                }
+            }
+        }
+        return output;
+    }
+}
    #+END_SRC
 * 整个框架： ET 7.2 ＋ YooAssets ＋ luban ＋ FairGUI
 - 整个框架的场景节点如下
