--- a/ET.org
+++ b/ET.org
@@ -1158,6 +1158,53 @@ public class SessionPlayerComponent : Entity, IAwake, IDestroy {
     public long PlayerId { get; set; }
 }
    #+END_SRC
+* Match: 匹配服，没有独立出来的匹配服
+** 服务器端SceneFactory 的场景类型：SceneType-s
+- 【匹配服】：可以添加一个。但参考项目里也没有独立出来。所以要想一下，有哪些组件是这个匹配服所需要的？太少就不用独立了
+   #+BEGIN_SRC csharp
+public static class SceneFactory {
+    public static async ETTask<Scene> CreateServerScene(Entity parent, long id, long instanceId, int zone, string name, SceneType sceneType, StartSceneConfig startSceneConfig = null) {
+        await ETTask.CompletedTask;
+        Scene scene = EntitySceneFactory.CreateScene(id, instanceId, zone, sceneType, name, parent);
+        scene.AddComponent<MailBoxComponent, MailboxType>(MailboxType.UnOrderMessageDispatcher);
+        switch (scene.SceneType) {
+            case SceneType.Router:
+                scene.AddComponent<RouterComponent, IPEndPoint, string>(startSceneConfig.OuterIPPort, startSceneConfig.StartProcessConfig.InnerIP);
+                break;
+            case SceneType.RouterManager: // 正式发布请用CDN代替RouterManager
+                // 云服务器在防火墙那里做端口映射
+                scene.AddComponent<HttpComponent, string>($"http:// *:{startSceneConfig.OuterPort}/");
+                break;
+            case SceneType.Realm:
+                scene.AddComponent<NetServerComponent, IPEndPoint>(startSceneConfig.InnerIPOutPort);
+                break;
+            case SceneType.Gate:
+                scene.AddComponent<NetServerComponent, IPEndPoint>(startSceneConfig.InnerIPOutPort);
+                scene.AddComponent<PlayerComponent>();
+                scene.AddComponent<GateSessionKeyComponent>();
+                break;
+            case SceneType.Map:
+                scene.AddComponent<UnitComponent>();
+                scene.AddComponent<AOIManagerComponent>();
+                break;
+            case SceneType.Location:
+                scene.AddComponent<LocationComponent>();
+                break;
+            case SceneType.Robot:
+                scene.AddComponent<RobotManagerComponent>();
+                break;
+            case SceneType.BenchmarkServer:
+                scene.AddComponent<BenchmarkServerComponent>();
+                scene.AddComponent<NetServerComponent, IPEndPoint>(startSceneConfig.OuterIPPort);
+                break;
+            case SceneType.BenchmarkClient:
+                scene.AddComponent<BenchmarkClientComponent>();
+                break;
+        }
+        return scene;
+    }
+}
+   #+END_SRC
 * ResourcesComponent 资源包管理器相关：有时候，拖拉机游戏里会需要拿它来加载图片
 ** ResourcesComponent: 同文件有其生成系
    #+BEGIN_SRC csharp
